# pitwall

./: .gitignore  README.md  config.example.json  main.py  pyproject.toml  wsgi.py
display/: __init__.py  buffer.py  driver.py  fonts.py  icons.py  renderer.py
eink/: __init__.py  serial_push.py
eink/firmware/: platformio.ini
eink/firmware/boards/: heltec_vision_master_e213.json
eink/firmware/src/: main.cpp
modules/: base.py  registry.py
modules/clock/: __init__.py  module.py
modules/f1_countdown/: __init__.py  module.py
modules/f1_timing/: __init__.py  f1mv.py  module.py  renderer.py
modules/home/: __init__.py  clock.py  module.py
modules/setup/: __init__.py  module.py
modules/weather/: __init__.py  module.py
provisioning/: ap_mode.py  captive_portal.py  wifi_setup.py
web/: app.py
web/static/: app.js  style.css
web/templates/: index.html  setup.html
widgets/: __init__.py  base.py  registry.py
widgets/f1_countdown/: __init__.py  widget.py
widgets/weather/: __init__.py  widget.py
