[project]
name = "pitwall"
version = "0.1.0"
description = "Modular LED matrix display system for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pyserial>=3.5",
    "requests>=2.33.1",
]
